<resources>
    <string name="app_name">eventBlock</string>

    <string name="Name">Name</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Age">Age</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Register_Here">Register_Here</string>
    <string name="Next">Next</string>
    <string name="Unavailable">Unavailable</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_upload_picture">UploadPicture</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>


    <string name="facebook_app_id">2008305832761584</string>
    <string name="fb_login_protocol_scheme">fb2008305832761584</string>
    <string name="title_activity_event">EventActivity</string>


</resources>
